--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Mokku",
-  "description": "Adds the API mocker MOKKU to Chrome Developer Tools for seamless integration & testing.",
-  "version": "2.0.10",
+  "name": "MokkuReborn",
+  "description": "Mock APIs from within Chrome Developer Tools",
+  "version": "1.0.0",
   "icons": {
     "16": "mokku-16.png",
     "48": "mokku-48.png",
